--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style_accueil.css" />
+    <link rel="stylesheet" href="style_accueil.css" />
 
     <title>Accueil</title>
   </head>
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="/imgs/logo.png" alt="" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="" /></div>
 
         <div class="title">Atelier de couture</div>
 
@@ -49,13 +49,13 @@
             <p>Retrouvez nos modèles DIY, patrons et tutoriels en ligne</p>
           </div>
           <div class="photo_home_page">
-            <img src="/imgs/photo_home_page.png" alt="" />
+            <img src="imgs/photo_home_page.png" alt="" />
           </div>
         </section>
 
         <!-- <section class="home_page_section2" > -->
         <div class="calendrie_home_page">
-          <a href="#"><img src="/imgs/calendrie.png" alt="" /></a>
+          <a href="#"><img src="imgs/calendrie.png" alt="" /></a>
         </div>
         <!-- <div class="home_page_evenement"> -->
         <div class="event_venir">
@@ -75,9 +75,9 @@
 
       <footer>
         <div class="icons_footer">
-          <img src="/imgs/icons_instagram.png" alt="" />
-          <img src="/imgs/icons_whatsapp.png" alt="" />
-          <img src="/imgs/icons_facebook.png" alt="" />
+          <img src="imgs/icons_instagram.png" alt="" />
+          <img src="imgs/icons_whatsapp.png" alt="" />
+          <img src="imgs/icons_facebook.png" alt="" />
         </div>
         <p class="text_footer">Conditions generales blabla</p>
       </footer>
