--- a/evenements.html
+++ b/evenements.html
@@ -1,64 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Evénements</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style_origin.css" />
+  <title>Evénements</title>
 </head>
+
 <body>
-    <header>
-              <!-- <div class="fist_part_header"> -->
-                <div class="logo"><img src="imgs/logo.png" alt="" /></div>
-                <div class="title"> Atelier de couture</div>
-              <!-- </div> -->
-        
-              <nav class="nav_main">
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Accueil</a>
-                </div>
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Réalisations</a>
-                </div>
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Planning</a>
-                </div>
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Equipe</a>
-                </div>
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Contact</a>
-                </div>
-              </nav>
-              <nav class="nav_menu">
-                <div class="btn_nav">
-                  <!-- <img src="/imgs/sewing.png" alt=""> -->
-                  <a href="#">Menu</a>
-                </div>
-              </nav>
-    </header>
-    <main>
-        <h2 class="title_evt">
-            Evénements à venir
-        </h2>
-        <div class="carte_noel">
+  <div class="wraper">
+  <header>
+      <!-- <div class="fist_part_header"> -->
+      <div class="logo"><img src="imgs/logo.png" alt="" /></div>
+      <div class="title">Evénements</div>
+      <!-- </div> -->
 
+      <nav class="nav_main">
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Accueil</a>
         </div>
-        <h2 class="title_evt">Evénements passés</h2>
-        <div class="carte_hallwn">
-
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Réalisations</a>
         </div>
-        <div class="carte_paq">
-
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Planning</a>
         </div>
-    </main>
-    <footer>
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Equipe</a>
+        </div>
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Contact</a>
+        </div>
+      </nav>
+      <nav class="nav_menu">
+        <div class="btn_nav">
+          <!-- <img src="/imgs/sewing.png" alt=""> -->
+          <a href="#">Menu</a>
+        </div>
+      </nav>
+  </header>
+  <main>
+    <h2 class="title_evt">
+      Evénements à venir
+    </h2>
+    <div class="card card_noel">
 
-    </footer>
+    </div>
+    <h2 class="title_evt">Evénements passés</h2>
+    <div class="card card_hallwn">
+
+    </div>
+    <div class="card card_paq">
+
+    </div>
+  </main>
+  <footer>
+
+  </footer>
+  </div>
 </body>
+
 </html>
