ajout de la police Langar dans dossier et css_origin

--- a/evenements.html
+++ b/evenements.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style_origin.css" />
+  <link rel="stylesheet" href="evenements.css">
   <title>Evénements</title>
 </head>
 
@@ -62,6 +63,12 @@
     </div>
   </main>
   <footer>
+    <div class="icons_footer">
+      <img src="imgs/icons_instagram.png" alt="" />
+      <img src="imgs/icons_whatsapp.png" alt="" />
+      <img src="imgs/icons_facebook.png" alt="" />
+    </div>
+    <p class="text_footer">Conditions generales blabla</p>
 
   </footer>
   </div>
