--- a/evenements.html
+++ b/evenements.html
@@ -52,7 +52,9 @@
       Evénements à venir
     </h2>
     <div class="card card_noel">
-
+      <p>
+        Nous sommes fiers de vous présenter nos événements passés et à venir
+      </p>
     </div>
     <h2 class="title_evt">Evénements passés</h2>
     <div class="card card_hallwn">
