page index prete a 80%

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
           </div>
         </section>
 
-        <!-- <section class="home_page_section2" > -->
+        <section class="home_page_section2" >
         <div class="calendrie_home_page">
           <a href="#"><img src="imgs/calendrie.png" alt="" /></a>
         </div>
-        <!-- <div class="home_page_evenement"> -->
+        <div class="home_page_evenement">
         <div class="event_venir">
           <a class="event_text" href="#">Evenements a venir</a>
           <a class="event_btn" href="#">Noël </a>
@@ -69,8 +69,8 @@
           <a class="event_btn" href="#">Pâques</a>
         </div>
 
-        <!-- </div> -->
-        <!-- </section> -->
+        </div> 
+         </section>
       </main>
 
       <footer>
