page accueil deux versions prete 100%

--- a/index.html
+++ b/index.html
@@ -68,9 +68,36 @@
           <a class="event_btn" href="#">Halloween</a>
           <a class="event_btn" href="#">Pâques</a>
         </div>
+       </div> 
+      </section>
 
-        </div> 
-         </section>
+      <section class="home_page_anonce_phone">
+          <div class="photo_anonce"><img src="imgs/guirlande_noel_1.png" alt=""></div>
+          <div class="text_anonce">
+            <h3>Créations de Noël</h3> 
+            <h4>Du 5 au 23 décembre.</h4>
+            <p>Retrouvez-nous dans cet atelier annuel thèmatique, 
+              Redècorez votre intèrieur, prèparez vos cadeaux, fabriquez votre sapin de Noël, 
+              calendrier de l’avent, guirlandes, 
+              cette annèe encore nous regorgeons d’inspiration 
+              pour faire de Noël une fête à chaque fois renouvellèe
+            </p>
+          </div>
+
+      </section>
+      
+      <section class="home_page_even_phone">
+         <div class="event_venir">
+          <a class="event_text" href="#">Evenements a venir</a>
+          <a class="event_btn" href="#">Noël </a>
+        </div>
+
+        <div class="event_passe">
+          <a class="event_text" href="#">Evenements passés</a>
+          <a class="event_btn" href="#">Halloween</a>
+        </div>
+       
+        </section>
       </main>
 
       <footer>
