page accueil et style_origin.css avec dropdown menu version 23:51 31.10.2022

--- a/index.html
+++ b/index.html
@@ -35,8 +35,17 @@
         </nav>
         <nav class="nav_menu">
           <div class="btn_nav">
-            <a href="#">Menu</a>
-          </div>
+            <a href="#" class="dropbtn">Menu</a>
+          </div>  
+            <div class="dropdown-content">
+              <a href="#">Accueil</a>
+              <a href="#">Realisations</a>
+              <a href="#">Planning</a>
+              <a href="#">Equipe</a>
+              <a href="#">Contact</a>
+              
+            </div>
+          
         </nav>
       </header>
 
