ajout dossier polices / css de wraper dans accueil

--- a/evenements.html
+++ b/evenements.html
@@ -48,13 +48,19 @@
       </nav>
   </header>
   <main>
-    <h2 class="title_evt">
+    <h2 class="title_evt top">
       Evénements à venir
     </h2>
     <div class="card card_noel">
-      <p>
-        Nous sommes fiers de vous présenter nos événements passés et à venir
-      </p>
+      <img src="imgs/guirlande_noel_1.png" alt="guirlande de noël" title="Oh, la jolie guirlande !">
+      <p>Retrouvez-nous dans cet atelier annuel thématique, <br>
+      Redécorez votre intérieur, préparez vos cadeaux, <br> fabriquez votre sapin de Noël unique, <br>
+    Calendrier de l'avent, guirlandes, <br> cette année encore nous regorgeons d'inspiration <br>
+  pour faire de Noël une fête à chaque fois renouvellée.</p>
+  <div class="boutons">
+    <button>places restantes : 6</button>
+    <button>Inscription</button>
+  </div>
     </div>
     <h2 class="title_evt">Evénements passés</h2>
     <div class="card card_hallwn">
