--- a/evenements.html
+++ b/evenements.html
@@ -52,10 +52,12 @@
       Evénements à venir
     </h2>
     <div class="card card_noel">
-      <img src="imgs/guirlande_noel_1.png" alt="guirlande de noël" title="Oh, la jolie guirlande !">
-      <p>Retrouvez-nous dans cet atelier annuel thématique, <br>
-      Redécorez votre intérieur, préparez vos cadeaux, <br> fabriquez votre sapin de Noël unique, <br>
-    Calendrier de l'avent, guirlandes, <br> cette année encore nous regorgeons d'inspiration <br>
+      <img class="bandeau_card" src="imgs/guirlande_noel_1.png" alt="guirlande de noël" title="Oh, la jolie guirlande !">
+      <h2 class="title_card">Créations de Noël</h2>
+      <h5>Du 5 au 23 décembre.</h5>
+      <p>Retrouvez-nous dans cet atelier annuel thématique, 
+      Redécorez votre intérieur, préparez vos cadeaux,  fabriquez votre sapin de Noël unique, 
+    Calendrier de l'avent, guirlandes, cette année encore nous regorgeons d'inspiration 
   pour faire de Noël une fête à chaque fois renouvellée.</p>
   <div class="boutons">
     <button>places restantes : 6</button>
