--- a/evenements.html
+++ b/evenements.html
@@ -12,7 +12,7 @@
 
 <body>
   <div class="wraper">
-  <header>
+    <header>
       <!-- <div class="fist_part_header"> -->
       <div class="logo"><img src="imgs/logo.png" alt="" /></div>
       <div class="title">Evénements</div>
@@ -46,39 +46,76 @@
           <a href="#">Menu</a>
         </div>
       </nav>
-  </header>
-  <main>
-    <h2 class="title_evt top">
-      Evénements à venir
-    </h2>
-    <div class="card card_noel">
-      <img src="imgs/guirlande_noel_1.png" alt="guirlande de noël" title="Oh, la jolie guirlande !">
-      <p>Retrouvez-nous dans cet atelier annuel thématique, <br>
-      Redécorez votre intérieur, préparez vos cadeaux, <br> fabriquez votre sapin de Noël unique, <br>
-    Calendrier de l'avent, guirlandes, <br> cette année encore nous regorgeons d'inspiration <br>
-  pour faire de Noël une fête à chaque fois renouvellée.</p>
-  <div class="boutons">
-    <button>places restantes : 6</button>
-    <button>Inscription</button>
-  </div>
-    </div>
-    <h2 class="title_evt">Evénements passés</h2>
-    <div class="card card_hallwn">
+    </header>
+    <!-- *******************************fin header*************************** -->
+    <main>
+      <h2 class="title_evt top">
+        Evénements à venir
+      </h2>
+      <!-- *******************************carte Noël *************************** -->
+      <div class="card card_noel">
+        <img class="bandeau_card" src="imgs/guirlande_noel_1.png" alt="guirlande de noël"
+          title="Oh, la jolie guirlande !">
+        <h2 class="title_card">Créations de Noël</h2>
+        <h5>Du 5 au 23 décembre.</h5>
+        <p>Retrouvez-nous dans cet atelier annuel thématique,
+          Redécorez votre intérieur, préparez vos cadeaux, fabriquez votre sapin de Noël unique,
+          Calendrier de l'avent, guirlandes, cette année encore nous regorgeons d'inspiration
+          pour faire de Noël une fête à chaque fois renouvellée.</p>
+        <div class="boutons">
+          <button>places restantes : 6</button>
+          <button>Inscription</button>
+        </div>
+      </div>
 
-    </div>
-    <div class="card card_paq">
+      <h2 class="title_evt">Evénements passés</h2>
 
-    </div>
-  </main>
-  <footer>
-    <div class="icons_footer">
-      <img src="imgs/icons_instagram.png" alt="" />
-      <img src="imgs/icons_whatsapp.png" alt="" />
-      <img src="imgs/icons_facebook.png" alt="" />
-    </div>
-    <p class="text_footer">Conditions generales blabla</p>
+      <!-- ******************************Carte Halloween***************************** -->
 
-  </footer>
+      <div class="card card_hallwn">
+        <img src="/imgs/Header Halloween 1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
+        <h2 class="title_card">Costumes de Halloween</h2>
+        <h5>Du 24 au 30 octobre 2022</h5>
+        <div class="images">
+          <img class="illustr" src="/imgs/Cape Halloween.jpg" alt="photo de cape de vampire">
+          <img class="rond" src="/imgs/costume citrouille 1.jpg" alt="costume de citrouille pour bébé">
+          <img class="illustr" src="/imgs/robe Halloween.jpg" alt="robe d'Halloween">
+        </div>
+        <div class="boutons">
+          <button>Couture</button>
+          <button>Costumes</button>
+        </div>
+      </div>
+
+      <!-- *******************************Carte Paques************************************** -->
+
+      <div class="card card_paq">
+        <img src="/imgs/bandeau paques 1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
+        <h2 class="title_card">Costumes de Halloween</h2>
+        <h5>Du 24 au 30 octobre 2022</h5>
+        <div class="images">
+          <img class="illustr" src="/imgs/lapin crochet.jpg" alt="lapin enn crochet">
+          <img class="rond" src="/imgs/pouyle crochet.jpg" alt="poule en crochet">
+          <img class="illustr" src="/imgs/oeuf au crochet.jpg" alt="oeuf en crochet">
+          <img class="illustr" src="/imgs/tete crochet.jpg" alt="oeuf en crochet">
+        </div>
+        <div class="boutons">
+          <button>Couture</button>
+          <button>Costumes</button>
+        </div>
+      </div>
+    </main>
+
+    <!-- ************************************fin du main************************************* -->
+    <footer>
+      <div class="icons_footer">
+        <img src="imgs/icons_instagram.png" alt="" />
+        <img src="imgs/icons_whatsapp.png" alt="" />
+        <img src="imgs/icons_facebook.png" alt="" />
+      </div>
+      <p class="text_footer">Conditions generales blabla</p>
+
+    </footer>
   </div>
 </body>
 
