--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <nav class="nav_main">
           <div class="btn_nav">
-            <a href="#">Accueil</a>
+            <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
             <a href="#">Realisations</a>
@@ -27,7 +27,7 @@
             <a href="#">Planning</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Equipe</a>
+            <a href="equipe.html">Equipe</a>
           </div>
           <div class="btn_nav">
             <a href="#">Contact</a>
@@ -38,10 +38,10 @@
             <a href="#" class="dropbtn">Menu</a>
           </div>  
             <div class="dropdown-content">
-              <a href="#">Accueil</a>
+              <a href="index.html">Accueil</a>
               <a href="#">Realisations</a>
               <a href="#">Planning</a>
-              <a href="#">Equipe</a>
+              <a href="equipe.html">Equipe</a>
               <a href="#">Contact</a>
               
             </div>
