renomme les fichiers img

--- a/evenements.html
+++ b/evenements.html
@@ -73,7 +73,7 @@
       <!-- ******************************Carte Halloween***************************** -->
 
       <div class="card card_hallwn">
-        <img src="/imgs/Header Halloween 1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
+        <img src="imgs/HeaderHalloween1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
         <h2 class="title_card">Costumes de Halloween</h2>
         <h5>Du 24 au 30 octobre 2022</h5>
         <div class="images">
