renomme fichiers img

--- a/evenements.html
+++ b/evenements.html
@@ -77,9 +77,9 @@
         <h2 class="title_card">Costumes de Halloween</h2>
         <h5>Du 24 au 30 octobre 2022</h5>
         <div class="images">
-          <img class="illustr" src="/imgs/Cape Halloween.jpg" alt="photo de cape de vampire">
-          <img class="rond" src="/imgs/costume citrouille 1.jpg" alt="costume de citrouille pour bébé">
-          <img class="illustr" src="/imgs/robe Halloween.jpg" alt="robe d'Halloween">
+          <img class="illustr" src="/imgs/capeHalloween.jpg" alt="photo de cape de vampire">
+          <img class="rond" src="/imgs/costumeCitrouille1.jpg" alt="costume de citrouille pour bébé">
+          <img class="illustr" src="/imgs/robeHalloween.jpg" alt="robe d'Halloween">
         </div>
         <div class="boutons">
           <button>Couture</button>
@@ -94,10 +94,10 @@
         <h2 class="title_card">Costumes de Halloween</h2>
         <h5>Du 24 au 30 octobre 2022</h5>
         <div class="images">
-          <img class="illustr" src="/imgs/lapin crochet.jpg" alt="lapin enn crochet">
-          <img class="rond" src="/imgs/pouyle crochet.jpg" alt="poule en crochet">
-          <img class="illustr" src="/imgs/oeuf au crochet.jpg" alt="oeuf en crochet">
-          <img class="illustr" src="/imgs/tete crochet.jpg" alt="oeuf en crochet">
+          <img class="illustr" src="/imgs/lapinCrochet.jpg" alt="lapin enn crochet">
+          <img class="rond" src="/imgs/pouleCrochet.jpg" alt="poule en crochet">
+          <img class="illustr" src="/imgs/oeufCrochet.jpg" alt="oeuf en crochet">
+          <img class="illustr" src="/imgs/teteCrochet.jpg" alt="oeuf en crochet">
         </div>
         <div class="boutons">
           <button>Couture</button>
