--- a/evenements.html
+++ b/evenements.html
@@ -77,9 +77,9 @@
         <h2 class="title_card">Costumes de Halloween</h2>
         <h5>Du 24 au 30 octobre 2022</h5>
         <div class="images">
-          <img class="illustr" src="/imgs/capeHalloween.jpg" alt="photo de cape de vampire">
-          <img class="rond" src="/imgs/costumeCitrouille1.jpg" alt="costume de citrouille pour bébé">
-          <img class="illustr" src="/imgs/robeHalloween.jpg" alt="robe d'Halloween">
+          <img class="illustr" src="imgs/capeHalloween.jpg" alt="photo de cape de vampire">
+          <img class="rond" src="imgs/costumeCitrouille1.jpg" alt="costume de citrouille pour bébé">
+          <img class="illustr" src="imgs/robeHalloween.jpg" alt="robe d'Halloween">
         </div>
         <div class="boutons">
           <button>Couture</button>
@@ -90,18 +90,18 @@
       <!-- *******************************Carte Paques************************************** -->
 
       <div class="card card_paq">
-        <img src="/imgs/bandeau paques 1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
-        <h2 class="title_card">Costumes de Halloween</h2>
-        <h5>Du 24 au 30 octobre 2022</h5>
+        <img src="imgs/bandeauPaques1.jpg" alt="bandeau Paques" title="Psssssst !!!" class="bandeau_card">
+        <h2 class="title_card">Décorations de Pâques</h2>
+        <h5></h5>
         <div class="images">
-          <img class="illustr" src="/imgs/lapinCrochet.jpg" alt="lapin enn crochet">
-          <img class="rond" src="/imgs/pouleCrochet.jpg" alt="poule en crochet">
-          <img class="illustr" src="/imgs/oeufCrochet.jpg" alt="oeuf en crochet">
-          <img class="illustr" src="/imgs/teteCrochet.jpg" alt="oeuf en crochet">
+          <img class="illustr" src="imgs/lapinCrochet.jpg" alt="lapin enn crochet">
+          <img class="rond" src="imgs/pouleCrochet.jpg" alt="poule en crochet">
+          <img class="illustr" src="imgs/oeufCrochet.jpg" alt="oeuf en crochet">
+          <img class="illustr" src="imgs/teteCrochet.jpg" alt="oeuf en crochet">
         </div>
         <div class="boutons">
-          <button>Couture</button>
-          <button>Costumes</button>
+          <button>Crochet</button>
+          <button>Déco</button>
         </div>
       </div>
     </main>
