add file contact version 14:50 04.11.2022

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="equipe.html">Equipe</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </div>
         </nav>
         <nav class="nav_menu">
@@ -42,7 +42,7 @@
               <a href="#">Realisations</a>
               <a href="#">Planning</a>
               <a href="equipe.html">Equipe</a>
-              <a href="#">Contact</a>
+              <a href="contact.html">Contact</a>
               
             </div>
           
