--- a/equipe.html
+++ b/equipe.html
@@ -29,7 +29,7 @@
             <a href="equipe.html">Equipe</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </div>
         </nav>
         <nav class="nav_menu">
@@ -41,7 +41,7 @@
             <a href="#">Realisations</a>
             <a href="#">Planning</a>
             <a href="equipe.html">Equipe</a>
-            <a href="#">Contact</a>
+            <a href="contact.html">Contact</a>
           </div>
         </nav>
       </header>
