page evenement + debut page realisations

--- a/evenements.html
+++ b/evenements.html
@@ -47,15 +47,17 @@
         </div>
       </nav>
     </header>
-    <!-- *******************************fin header*************************** -->
+    <!-- *******************************FIN DU HEADER*************************** -->
     <main>
       <h2 class="title_evt top">
         Evénements à venir
       </h2>
-      <!-- *******************************carte Noël *************************** -->
+      <!-- *******************************CARTE NOEL *************************** -->
       <div class="card card_noel">
-        <img class="bandeau_card" src="imgs/guirlande_noel_1.png" alt="guirlande de noël"
-          title="Oh, la jolie guirlande !">
+        <div class="bandeau_card_noel"></div>
+        <!-- <img class="bandeau_card" src="imgs/guirl_noel.png" alt="guirlande de noël"
+          title="Oh, la jolie guirlande !"> -->
+
         <h2 class="title_card">Créations de Noël</h2>
         <h5>Du 5 au 23 décembre.</h5>
         <p>Retrouvez-nous dans cet atelier annuel thématique,
@@ -70,10 +72,11 @@
 
       <h2 class="title_evt">Evénements passés</h2>
 
-      <!-- ******************************Carte Halloween***************************** -->
+      <!-- ******************************CARTE HALLOWEEN***************************** -->
 
       <div class="card card_hallwn">
-        <img src="imgs/HeaderHalloween1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card">
+        <div class="bandeau_card_hallw"></div>
+        <!-- <img src="imgs/HeaderHalloween1.jpg" alt="bandeau Halloween" title="Hahahaha !!!" class="bandeau_card"> -->
         <h2 class="title_card">Costumes de Halloween</h2>
         <h5>Du 24 au 30 octobre 2022</h5>
         <div class="images">
@@ -87,17 +90,18 @@
         </div>
       </div>
 
-      <!-- *******************************Carte Paques************************************** -->
+      <!-- *******************************CARTE PAQUES************************************** -->
 
       <div class="card card_paq">
-        <img src="imgs/bandeauPaques1.jpg" alt="bandeau Paques" title="Psssssst !!!" class="bandeau_card">
+        <div class="bandeau_card_paq"></div>
+        <!-- <img src="imgs/bandeauPaques1.jpg" alt="bandeau Paques" title="Psssssst !!!" class="bandeau_card"> -->
         <h2 class="title_card">Décorations de Pâques</h2>
         <h5></h5>
         <div class="images">
           <img class="illustr" src="imgs/lapinCrochet.jpg" alt="lapin enn crochet">
           <img class="rond" src="imgs/pouleCrochet.jpg" alt="poule en crochet">
           <img class="illustr" src="imgs/oeufCrochet.jpg" alt="oeuf en crochet">
-          <img class="illustr" src="imgs/teteCrochet.jpg" alt="oeuf en crochet">
+          <!-- <img class="illustr" src="imgs/teteCrochet.jpg" alt="oeuf en crochet"> -->
         </div>
         <div class="boutons">
           <button>Crochet</button>
@@ -106,7 +110,7 @@
       </div>
     </main>
 
-    <!-- ************************************fin du main************************************* -->
+    <!-- ************************************FIN DU MAIN************************************* -->
     <footer>
       <div class="icons_footer">
         <img src="imgs/icons_instagram.png" alt="" />
