--- a/realisations.html
+++ b/realisations.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style_origin.css">
+    <link rel="stylesheet" href="realisations.css">
     <title>Nos réalisations</title>
 </head>
 
@@ -41,7 +42,26 @@
 
         </header>
         <main>
-
+            <nav>
+                <ul class="nav_secondaire">
+                    <a href="realisations.html"><li class="button_secondaire active">Toutes</li></a>
+                    <a href="realisations_theme.html"><li class="button_secondaire">Couture</li></a>
+                    <a href="realisations_theme.html"><li class="button_secondaire">Crochet</li></a>
+                    <a href="realisations_theme.html"><li class="button_secondaire">Tricot</li></a>
+                </ul>
+            </nav>
+            <div class="card_real">
+                <h2 class="titre_card"> </h2>
+            </div>
+            <div class="card_real">
+                <h2 class="titre_card"> </h2>
+            </div>
+            <div class="card_real">
+                <h2 class="titre_card"> </h2>
+            </div>
+            <div class="card_real">
+                <h2 class="titre_card"> </h2>
+            </div>
         </main>
         <footer>
             <div class="icons_footer">
