page real en cours

--- a/realisations.html
+++ b/realisations.html
@@ -42,25 +42,47 @@
 
         </header>
         <main>
+            <!-- ****************************NAV SECONDAIRE****************************************  -->
             <nav>
                 <ul class="nav_secondaire">
-                    <a href="realisations.html"><li class="button_secondaire active">Toutes</li></a>
-                    <a href="realisations_theme.html"><li class="button_secondaire">Couture</li></a>
-                    <a href="realisations_theme.html"><li class="button_secondaire">Crochet</li></a>
-                    <a href="realisations_theme.html"><li class="button_secondaire">Tricot</li></a>
+                    <a href="realisations.html">
+                        <li class="button_secondaire active">Toutes</li>
+                    </a>
+                    <a href="realisations_theme.html">
+                        <li class="button_secondaire">Couture</li>
+                    </a>
+                    <a href="realisations_theme.html">
+                        <li class="button_secondaire">Crochet</li>
+                    </a>
+                    <a href="realisations_theme.html">
+                        <li class="button_secondaire">Tricot</li>
+                    </a>
                 </ul>
             </nav>
-            <div class="card_real">
-                <h2 class="titre_card"> </h2>
+            <!-- ***********************************FIN NAV SECONDAIRE***************************** -->
+            <!-- ************************************CARTE LAPIN EN CROCHET************************* -->
+            <div class="card_lapin fond_bleu">
+                <h2 class="titre_card">Le lapin en crochet</h2>
+                <div class="fond_img">
+                    <div class="description">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
+                        repudiandae adipisci a inventore quaerat! Recusandae officiis, nesciunt saepe deleniti porro
+                        consequatur ratione.
+                    </div>
+                </div>
+
             </div>
-            <div class="card_real">
-                <h2 class="titre_card"> </h2>
+            <!-- ************************************CARTE COSTUMES DE NOEL************************* -->
+            <div class="card_noel fond_bleu">
+                <h2 class="titre_card">Costumes de Noël</h2>
             </div>
-            <div class="card_real">
-                <h2 class="titre_card"> </h2>
+            <!-- ************************************CARTE GANTS************************* -->
+            <div class="card_gants fond_bleu">
+                <h2 class="titre_card">Les gants en tricot</h2>
             </div>
-            <div class="card_real">
-                <h2 class="titre_card"> </h2>
+            <!-- ************************************CARTE ROBE************************* -->
+            <div class="card_robe fond_bleu">
+                <h2 class="titre_card">Robe de printemps</h2>
             </div>
         </main>
         <footer>
