ajouts accents, ajouts des variables de couleur --second_color_darkblue et second_color_lightyelow

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Realisations</a>
+            <a href="#">Réalisations</a>
           </div>
           <div class="btn_nav">
             <a href="#">Planning</a>
@@ -38,7 +38,7 @@
           </div>
           <div class="dropdown-content">
             <a href="index.html">Accueil</a>
-            <a href="#">Realisations</a>
+            <a href="#">Réalisations</a>
             <a href="#">Planning</a>
             <a href="equipe.html">Equipe</a>
             <a href="contact.html">Contact</a>
@@ -80,9 +80,8 @@
             
           </article>
           <article class="article6_contact">
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.7930513613105!2d3.8885606154581627!3d43.61085037912271!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af75e22f7f97%3A0xa311207f5c128449!2s717%20Av.%20Jean%20Mermoz%2C%2034000%20Montpellier!5e0!3m2!1sru!2sfr!4v1667568443474!5m2!1sru!2sfr"
-              width="600"
+            <iframe 
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.793051366231!2d3.88855525096192!3d43.61085037902028!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12b6af75e22f7f97%3A0xa311207f5c128449!2s717%20Av.%20Jean%20Mermoz%2C%2034000%20Montpellier!5e0!3m2!1sfr!2sfr!4v1667977898358!5m2!1sfr!2sfr"
               height="450"
               style="border: 0"
               allowfullscreen=""
@@ -101,7 +100,7 @@
           <img src="imgs/icons_whatsapp.png" alt="" />
           <img src="imgs/icons_facebook.png" alt="" />
         </div>
-        <p class="text_footer">Conditions generales blabla</p>
+        <p class="text_footer">Conditions générales blabla</p>
       </footer>
     </div>
   </body>
