--- a/evenements.html
+++ b/evenements.html
@@ -63,7 +63,7 @@
         <p>Retrouvez-nous dans cet atelier annuel thématique,
           Redécorez votre intérieur, préparez vos cadeaux, fabriquez votre sapin de Noël unique,
           Calendrier de l'avent, guirlandes, cette année encore nous regorgeons d'inspiration
-          pour faire de Noël une fête à chaque fois renouvellée.</p>
+          pour faire de Noël une fête à chaque fois renouvelée.</p>
         <div class="boutons">
           <button>places restantes : 6</button>
           <button>Inscription</button>
@@ -117,7 +117,7 @@
         <img src="imgs/icons_whatsapp.png" alt="" />
         <img src="imgs/icons_facebook.png" alt="" />
       </div>
-      <p class="text_footer">Conditions generales blabla</p>
+      <p class="text_footer">Conditions générales blabla</p>
 
     </footer>
   </div>
