corrige accents et ajouts variables secondaires darkblue et lightyelow

--- a/equipe.html
+++ b/equipe.html
@@ -20,7 +20,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Realisations</a>
+            <a href="#">Réalisations</a>
           </div>
           <div class="btn_nav">
             <a href="#">Planning</a>
@@ -51,12 +51,12 @@
           <h2>Notre association</h2>
           <div >
             <p class="text_equipe">
-              <span>Monsieur Couturier</span>  est une association à but non-lucratif crèèe en
+              <span>Monsieur Couturier</span>  est une association à but non-lucratif créée en
               2019 par Mark et Mary.
             </p>
             <p class="text_equipe">
-              Forts de leurs expériences passée, ils ont su fèdèrer autour d’eux
-              un large rèseau de membres actifs qui alimentent les crèations du
+              Forts de leurs expériences passée, ils ont su fédérer autour d’eux
+              un large réseau de membres actifs qui alimentent les créations du
               club que ce soit en couture, tricot, crochet autour des créations
               pour bébés, et de la création de costumes.
             </p>
@@ -100,7 +100,7 @@
           <img src="imgs/icons_whatsapp.png" alt="" />
           <img src="imgs/icons_facebook.png" alt="" />
         </div>
-        <p class="text_footer">Conditions generales blabla</p>
+        <p class="text_footer">Conditions générales blabla</p>
       </footer>
     </div>
   </body>
