--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Realisations</a>
+            <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
             <a href="#">Planning</a>
@@ -39,7 +39,7 @@
           </div>  
             <div class="dropdown-content">
               <a href="index.html">Accueil</a>
-              <a href="realisations.html">Realisations</a>
+              <a href="realisations.html">Réalisations</a>
               <a href="#">Planning</a>
               <a href="equipe.html">Equipe</a>
               <a href="contact.html">Contact</a>
@@ -87,9 +87,9 @@
             <h3>Créations de Noël</h3> 
             <h4>Du 5 au 23 décembre.</h4>
             <p>Retrouvez-nous dans cet atelier annuel thèmatique, 
-              Redècorez votre intèrieur, prèparez vos cadeaux, fabriquez votre sapin de Noël, 
+              Redécorez votre intèrieur, prèparez vos cadeaux, fabriquez votre sapin de Noël, 
               calendrier de l’avent, guirlandes, 
-              cette annèe encore nous regorgeons d’inspiration 
+              cette année encore nous regorgeons d’inspiration 
               pour faire de Noël une fête à chaque fois renouvellèe
             </p>
           </div>
