travail sur image card lapin

--- a/realisations.html
+++ b/realisations.html
@@ -62,8 +62,9 @@
             <!-- ***********************************FIN NAV SECONDAIRE***************************** -->
             <!-- ************************************CARTE LAPIN EN CROCHET************************* -->
             <div class="card_lapin fond_bleu">
-                <h2 class="titre_card">Le lapin en crochet</h2>
-                <div class="fond_img">
+                <h2 class="titre_card">Le lapin en tricot</h2>
+                <div class="container">
+                    <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricot">
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
                         repudiandae adipisci a inventore quaerat! Recusandae officiis, nesciunt saepe deleniti porro
