modifier les fichiers style et html 20:12 10.11.2022

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <section class="home_page_section1">
           <div class="text_home_page">
             <p>
-              Depuis 2016, L’atelier de couture propose des cours et des
+              Depuis 2016, l’atelier de couture propose des cours et des
               ateliers collectifs de couture, tricot, crochet avec Mary et Mark.
             </p>
             <p>Retrouvez nos modèles DIY, patrons et tutoriels en ligne</p>
