ajoute ancres dans les fichiers 20:58 10.11.2022

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Réalisations</a>
+            <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
             <a href="#">Planning</a>
