--- a/index.html
+++ b/index.html
@@ -69,14 +69,14 @@
         </div>
         <div class="home_page_evenement">
         <div class="event_venir">
-          <a class="event_text" href="#">Evenements a venir</a>
-          <a class="event_btn" href="#">Noël </a>
+          <a class="event_text" href="evenements.html#event_venir">Evénements à venir</a>
+          <a class="event_btn" href="evenements.html#event_noel">Noël </a>
         </div>
 
         <div class="event_passe">
-          <a class="event_text" href="#">Evenements passés</a>
-          <a class="event_btn" href="#">Halloween</a>
-          <a class="event_btn" href="#">Pâques</a>
+          <a class="event_text" href="evenements.html#event_pass">Evénements passés</a>
+          <a class="event_btn" href="evenements.html#event_hallwn">Halloween</a>
+          <a class="event_btn" href="evenements.html#event_paq">Pâques</a>
         </div>
        </div> 
       </section>
@@ -98,13 +98,13 @@
       
       <section class="home_page_even_phone">
          <div class="event_venir">
-          <a class="event_text" href="#">Evenements a venir</a>
-          <a class="event_btn" href="#">Noël </a>
+          <a class="event_text" href="evenements.html#event_venir">Evénements à venir</a>
+          <a class="event_btn" href="evenements.html#event_noel">Noël </a>
         </div>
 
         <div class="event_passe">
-          <a class="event_text" href="#">Evenements passés</a>
-          <a class="event_btn" href="#">Halloween</a>
+          <a class="event_text" href="evenements.html#event_pass">Evénements passés</a>
+          <a class="event_btn" href="evenements.html#event_hallwn">Halloween</a>
         </div>
        
         </section>
