--- a/realisations.html
+++ b/realisations.html
@@ -19,19 +19,19 @@
 
             <nav class="nav_main">
                 <div class="btn_nav">
-                    <a href="#">Accueil</a>
+                    <a href="index.html">Accueil</a>
                 </div>
                 <div class="btn_nav">
-                    <a href="#">Réalisations</a>
+                    <a href="realisations.html">Réalisations</a>
                 </div>
                 <div class="btn_nav">
                     <a href="#">Planning</a>
                 </div>
                 <div class="btn_nav">
-                    <a href="#">Equipe</a>
+                    <a href="equipe.html">Equipe</a>
                 </div>
                 <div class="btn_nav">
-                    <a href="#">Contact</a>
+                    <a href="contact.html">Contact</a>
                 </div>
             </nav>
             <nav class="nav_menu">
