--- a/equipe.html
+++ b/equipe.html
@@ -20,7 +20,7 @@
             <a href="index.html">Accueil</a>
           </div>
           <div class="btn_nav">
-            <a href="#">Réalisations</a>
+            <a href="realisations.html">Réalisations</a>
           </div>
           <div class="btn_nav">
             <a href="#">Planning</a>
