changement de police secondaire, alt sur les images ok

--- a/realisations.html
+++ b/realisations.html
@@ -13,7 +13,7 @@
 <body>
     <div class="wraper">
         <header>
-            <div class="logo"><img src="imgs/logo.png" alt="Logo" /></div>
+            <div class="logo"><img src="imgs/logo.png" alt="image du Logo de Monsieur Couturier" /></div>
 
             <div class="title">Nos réalisations</div>
 
@@ -28,7 +28,7 @@
                     <a href="#">Planning</a>
                 </div>
                 <div class="btn_nav">
-                    <a href="equipe.html">Equipe</a>
+                    <a href="equipe.html">L'équipe</a>
                 </div>
                 <div class="btn_nav">
                     <a href="contact.html">Contact</a>
@@ -86,7 +86,7 @@
                 <h2 class="titre_card">Le lapin en tricot</h2>
                 <div class="container">
                     <div>
-                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricot">
+                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="photo de lapin en tricot">
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
@@ -149,7 +149,7 @@
                 <h2 class="titre_card">Les gants</h2>
                 <div class="container">
                     <div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo_gants_tricotés">
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
@@ -180,7 +180,7 @@
                 <h2 class="titre_card">Robe de printemps</h2>
                 <div class="container">
                     <div>
-                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo_couture">
+                        <img class="fond_img" src="imgs/fond_tricot.jpg" alt="photo de tricot">
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
@@ -211,7 +211,7 @@
                 <h2 class="titre_card">Encore du crochet</h2>
                 <div class="container">
                     <div>
-                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo_gants_tricotés">
+                        <img class="fond_img" src="imgs/fond_gants.png" alt="photo de gants en crochet">
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
@@ -273,7 +273,7 @@
                 <h2 class="titre_card">Encore du tricot</h2>
                 <div class="container">
                     <div>
-                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricot">
+                        <img class="fond_img" src="imgs/fond_lapin_crochet.png" alt="lapin tricoté">
                     </div>
                     <div class="description">
                         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero, eius necessitatibus earum
