--- a/equipe.html
+++ b/equipe.html
@@ -11,9 +11,9 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="image du Logo de Monsieur Couturier" /></div>
 
-        <div class="title">Qui sommes nous</div>
+        <div class="title">Qui sommes nous ?</div>
 
         <nav class="nav_main">
           <div class="btn_nav">
@@ -26,7 +26,7 @@
             <a href="#">Planning</a>
           </div>
           <div class="btn_nav">
-            <a href="equipe.html">Equipe</a>
+            <a href="equipe.html">L'équipe</a>
           </div>
           <div class="btn_nav">
             <a href="contact.html">Contact</a>
@@ -51,27 +51,27 @@
           <h2>Notre association</h2>
           <div >
             <p class="text_equipe">
-              <span>Monsieur Couturier</span>  est une association à but non-lucratif créée en
+              <span class="first_words">Monsieur Couturier</span>  est une association à but non-lucratif créée en
               2019 par Mark et Mary.
             </p>
             <p class="text_equipe">
-              Forts de leurs expériences passée, ils ont su fédérer autour d’eux
+              Forts de leurs expériences passées, ils ont su fédérer autour d’eux
               un large réseau de membres actifs qui alimentent les créations du
-              club que ce soit en couture, tricot, crochet autour des créations
-              pour bébés, et de la création de costumes.
+              club, que ce soit en couture, tricot, crochet, créations
+              pour bébés, et costumes.
             </p>
           </div>
         </section>
 
         <section class="section2_equipe">
           <p>Notre magnifique équipe</p>
-          <img src="imgs/notre_equipe.png" alt="" />
+          <img src="imgs/notre_equipe.png" alt="photo de l'équipe du club de Monsieur Couturier" />
         </section>
 
         <section class="section3_equipe">
           <h2>Les crèateurs</h2>
           <div class="createur">
-            <img src="imgs/photo_equipe_Marry.png" alt="" />
+            <img src="imgs/photo_equipe_Marry.png" alt="Photo de Mary" />
             <h3>Mary</h3>
             <p class="text_equipe">
               Assistante maternelle de profession, elle a toujours développé ces
@@ -82,10 +82,10 @@
           </div>
 
           <div class="createur">
-            <img src="imgs/photo_eauipe_Mark.png" alt="" />
+            <img src="imgs/photo_eauipe_Mark.png" alt="Photo de Mark" />
             <h3>Mark</h3>
             <p class="text_equipe">
-              Après ne carrière internationale de joueur de rugby, Mark a enfin
+              Après une carrière internationale de joueur de rugby, Mark a enfin
               trouvé sa voie dans le crochet et le tricot. Sa rencontre avec
               Mary a été décisive, il se consacre depuis pleinement à cette
               activité, en parallèle avec l’entrainement du club de rugby local.
@@ -96,11 +96,11 @@
 
       <footer>
         <div class="icons_footer">
-          <img src="imgs/icons_instagram.png" alt="" />
-          <img src="imgs/icons_whatsapp.png" alt="" />
-          <img src="imgs/icons_facebook.png" alt="" />
+          <img src="imgs/icons_instagram.png" alt="icône Instagram" />
+          <img src="imgs/icons_whatsapp.png" alt="icône Whatsapp" />
+          <img src="imgs/icons_facebook.png" alt="icône Facebook" />
         </div>
-        <p class="text_footer">Conditions générales blabla</p>
+        <p class="text_footer">Conditions générales blablah</p>
       </footer>
     </div>
   </body>
