--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <div class="wraper">
       <header>
-        <div class="logo"><img src="imgs/logo.png" alt="" /></div>
+        <div class="logo"><img src="imgs/logo.png" alt="image du logo de Monsieur Couturier" /></div>
 
         <div class="title">Atelier de couture</div>
 
@@ -27,7 +27,7 @@
             <a href="#">Planning</a>
           </div>
           <div class="btn_nav">
-            <a href="equipe.html">Equipe</a>
+            <a href="equipe.html">L'équipe</a>
           </div>
           <div class="btn_nav">
             <a href="contact.html">Contact</a>
@@ -41,7 +41,7 @@
               <a href="index.html">Accueil</a>
               <a href="realisations.html">Réalisations</a>
               <a href="#">Planning</a>
-              <a href="equipe.html">Equipe</a>
+              <a href="equipe.html">L'équipe</a>
               <a href="contact.html">Contact</a>
               
             </div>
@@ -53,13 +53,13 @@
         <section class="home_page_section1">
           <div class="text_home_page">
             <p>
-              Depuis 2016, l’atelier de couture propose des cours et des
+              <span class="first_words"> Depuis 2016,</span> l’atelier de Monsieur Couturier propose des cours et des
               ateliers collectifs de couture, tricot, crochet avec Mary et Mark.
             </p>
             <p>Retrouvez nos modèles DIY, patrons et tutoriels en ligne</p>
           </div>
           <div class="photo_home_page">
-            <img src="imgs/photo_home_page.png" alt="" />
+            <img src="imgs/photo_home_page.png" alt="photo de couturière" />
           </div>
         </section>
 
@@ -82,7 +82,7 @@
       </section>
 
       <section class="home_page_anonce_phone">
-          <div class="photo_anonce"><img src="imgs/guirlande_noel_1.png" alt=""></div>
+          <div class="photo_anonce"><img src="imgs/guirlande_noel_1.png" alt="photo de guirlande de Noël"></div>
           <div class="text_anonce">
             <h3>Créations de Noël</h3> 
             <h4>Du 5 au 23 décembre.</h4>
@@ -112,11 +112,11 @@
 
       <footer>
         <div class="icons_footer">
-          <img src="imgs/icons_instagram.png" alt="" />
-          <img src="imgs/icons_whatsapp.png" alt="" />
-          <img src="imgs/icons_facebook.png" alt="" />
+          <img src="imgs/icons_instagram.png" alt="icône Instagram" />
+          <img src="imgs/icons_whatsapp.png" alt="icône Whatsapp" />
+          <img src="imgs/icons_facebook.png" alt="icône Facebook" />
         </div>
-        <p class="text_footer">Conditions generales blabla</p>
+        <p class="text_footer">Conditions générales blablah</p>
       </footer>
     </div>
   </body>
